--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+navlinks: ["1_lightsapi.html", "2_groupsapi.html"]
+
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:year/:month/:day/:title 
